Add gambling feature with UI updates, shop menu enhancements, and localization improvements